CORE-21467: MUJI AR Bracket alignment fix.

--- a/docroot/themes/custom/transac/alshaya_muji/sass/config/_fonts.scss
+++ b/docroot/themes/custom/transac/alshaya_muji/sass/config/_fonts.scss
@@ -130,7 +130,7 @@ $muji-arabic-bold-nodir: 'HelveticaNeue-Bold', 'Tahoma-Bold', 'Arial';
 
 $arial: $muji-regular;
 $arial-nodir: $muji-regular-nodir;
-$alshaya-thin: if-ltr($muji-regular, $muji-arabic-thin);
+$alshaya-thin: $muji-regular;
 $alshaya-bold: $muji-bold;
 $alshaya-arabic-thin: $muji-arabic-thin;
 $alshaya-arabic-bold: $muji-arabic-bold;
